@@ -4,6 +4,7 @@
 * Enhancement - Cache the form and entries results for better performance.
 * Fix - Attach pdf to email glitches.
 * Fix - Get entries permission issue.
+* Fix - Smart Tag Page Issues.
 
 = 1.7.5.2 - 19-06-2021 =
 * Fix - Permission issue with file upload on frontend.
